# saproject

./: README.md  main.py  pyproject.toml  utility.py
static/styles/: index.css  search.css
templates/: index.html  phrase.html  phrase_result.html  search.html  tweets.html
